Settings are working on the new gui

--- a/src/main/resources/general.css
+++ b/src/main/resources/general.css
@@ -61,3 +61,15 @@ td input {
 .label {
     margin: auto;
 }
+
+.dropdown-item {
+    cursor: pointer;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+.right-align {
+    text-align: right;
+}
